# CameraCode

./: README.md  plan_creator.py
Basic_acqisition/: Basic_acquisition.py  Preset_config_params_distal  Preset_config_params_lateral  README  Test_acquisition.py  config.json  config_description.odt  config_distal.json  config_lateral.json  config_top.json
Optical_correction/: Optical_correction.py  convert_bmp.py  undistort_image.py  vignetting_correction.py
Optical_correction/CameraCalibration/: camera_Calibration.cc
Optical_correction/Distortion/: CMakeLists.txt  calibrate_camera.py  combine_frames.py  compile.sh  undistort_image.py
Optical_correction/Distortion/10mm/images/: cal_image1.npy  cal_image10.npy  cal_image11.npy  cal_image12.npy  cal_image13.npy  cal_image14.npy  cal_image15.npy  cal_image16.npy  cal_image17.npy  cal_image18.npy  cal_image19.npy  cal_image2.npy  cal_image20.npy  cal_image3.npy  cal_image4.npy  cal_image5.npy  cal_image6.npy  cal_image7.npy  cal_image8.npy  cal_image9.npy  calibration_matrix.npy
Optical_correction/Distortion/5mm/images/: cal_image1.npy  cal_image10.npy  cal_image11.npy  cal_image12.npy  cal_image13.npy  cal_image14.npy  cal_image15.npy  cal_image16.npy  cal_image17.npy  cal_image18.npy  cal_image19.npy  cal_image2.npy  cal_image20.npy  cal_image3.npy  cal_image4.npy  cal_image5.npy  cal_image6.npy  cal_image7.npy  cal_image8.npy  cal_image9.npy  calibration_matrix.npy
image_viewing/: accumulate.py  plot_all_np.py  plot_bmp.py  plot_npy.py  plot_npz.py  tripple_plot.py
(+25 files in other folders)
